--- a/application/views/scripts/view.phtml
+++ b/application/views/scripts/view.phtml
@@ -1,8 +1,13 @@
 <?php
 /*
- * Because of limitations on the client, full-security around XSS hinges solely around the API removing < and >
- * </script><script>alert('xss')</script> becomes &lt;/script&gt;&lt;script&gt;alert('xss')&lt;/script&gt;
+ * Because of limitations on the client, full-security around XSS hinges solely around the API removing dangerous chars
  *
- * We don't escape quotes because < is what is causing issues.
+ * We must escape <, >, &, and ". Why escape quotes? https://www.securitysift.com/quotes-and-xss-planning-your-escape/
+ *
+ * This is achieved by using json_encode with the poorly documented JSON_HEX_QUOT
+ * $string = '{"a": "it cost 20&euros; and a </script><script>alert(\'xss\')</script>)"}';
+ * echo json_encode($string, JSON_HEX_QUOT);
+ * "{\u0022a\u0022: \u0022it cost 20&euros; and a <\/script><script>alert('xss')<\/script>)\u0022}"
+ *
  */
-echo htmlspecialchars(Zend_Json::encode($this->output), ENT_NOQUOTES);
+echo json_encode($this->output, JSON_HEX_QUOT);
